hphp/hack/test/typecheck/reactive/rx_if_implements3.php.exp
File "rx_if_implements3.php", line 8, characters 5-21:
Reactive functions can only call other reactive functions. (Typing[4200])
File "rx_if_implements3.php", line 12, characters 28-35:
This function is shallow reactive.
